tdf#91383: sw: prevent style preview from actually creating styles

The dialog/sidebar should not actually create styles that don't exist yet,
because it messes up Undo and the (unused) styles are then unnecessarily
exported to documents.

Due to Writer's ... unusual SwDocStyleSheet class this is a bit tricky.

Add a new function GetItemSetForPreview() and use it from the style preview
code.

The implementation does not use FillPhysical so will temporarily create and
then delete any non-existing styles.

Skip page and numbering styles for now since they don't have a useful preview.

(regression from ca95307638207db5d662059aa61594151a13e927)

(cherry picked from commit 93067f37cf22aa119db5878c4345fea500cbbb42)

-Werror,-Wreturn-type
(cherry picked from commit 0ed64030f17849ea943800343003c5ec3f4f1388)

Change-Id: Id6ee30ea467fc24c991547a4c23a9ce14fdd86c7
Reviewed-on: https://gerrit.libreoffice.org/18381
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>